--- a/src/app/angular/ng/ng.component.html
+++ b/src/app/angular/ng/ng.component.html
@@ -1,38 +1,41 @@
 <div class="wraper">
     <div class="list">
-        <!-- Angular Fundamentals -->
-        <button class="styled" routerLink="typescript-essentials">TypeScript Essentials</button>
-        <button class="styled" routerLink="components-decorators">Components & Decorators</button>
-        <button class="styled" routerLink="data-binding">Data Binding</button>
-        <button class="styled" routerLink="directives-pipes">Directives & Pipes</button>
-        <button class="styled" routerLink="lifecycle-hooks">Lifecycle Hooks</button>
-        <button class="styled" routerLink="templates-forms">Templates & Forms</button>
-       <!-- Intermediate Angular -->
-        <button class="styled" routerLink="services-di">Services & Dependency Injection</button>
-        <button class="styled" routerLink="routing-navigation">Routing & Navigation</button>
-        <button class="styled" routerLink="observables-rxjs">Observables & RxJS</button>
-        <button class="styled" routerLink="http-client">HTTP Client</button>
-        <button class="styled" routerLink="angular-material">Angular Material</button>
-        <button class="styled" routerLink="state-management">State Management Basics</button>
+            <!-- Angular Fundamentals -->
+            <button class="styled" routerLink="angular-architecture">Angular Architecture & Project Setup</button>
+            <button class="styled" routerLink="components-decorators">Components & Decorators</button>
+            <button class="styled" routerLink="data-binding">Data Binding (Interpolation, Property, Event, Two-Way)</button>
+            <button class="styled" routerLink="directives">Directives (Structural & Attribute)</button>
+            <button class="styled" routerLink="pipes">Pipes (Built-in & Custom)</button>
+            <button class="styled" routerLink="lifecycle-hooks">Lifecycle Hooks</button>
+            <button class="styled" routerLink="templates-forms">Templates & Template-Driven Forms</button>
+            <button class="styled" routerLink="reactive-forms">Reactive Forms</button>
 
-        <!-- Advanced Angular -->
-        <button class="styled" routerLink="ngrx-redux">NgRx / Redux</button>
-        <button class="styled" routerLink="change-detection">Change Detection</button>
-        <button class="styled" routerLink="performance-optimization">Performance Optimization</button>
-        <button class="styled" routerLink="lazy-loading">Lazy Loading</button>
-        <button class="styled" routerLink="unit-e2e-testing">Unit & E2E Testing</button>
-        <button class="styled" routerLink="security">Security Best Practices</button>
-        <button class="styled" routerLink="custom-directives-pipes">Custom Directives & Pipes</button>
-        <button class="styled" routerLink="dynamic-components">Dynamic Components</button>
+            <!-- Intermediate Angular -->
+            <button class="styled" routerLink="services-di">Services & Dependency Injection</button>
+            <button class="styled" routerLink="routing-navigation">Routing & Navigation</button>
+            <button class="styled" routerLink="routing-guards">Route Guards & Resolvers</button>
+            <button class="styled" routerLink="observables-rxjs">Observables & RxJS</button>
+            <button class="styled" routerLink="http-client">HTTP Client & Interceptors</button>
+            <button class="styled" routerLink="angular-material">Angular Material & UI Libraries</button>
+            <button class="styled" routerLink="state-management-basics">State Management Basics</button>
+            <button class="styled" routerLink="component-communication">Component Communication (Input, Output, Services)</button>
 
-        <!-- Interview Practice (Angular) -->
-        <button class="styled" routerLink="component-communication">Component Communication</button>
-        <button class="styled" routerLink="complex-forms">Complex Forms & Validations</button>
-        <button class="styled" routerLink="routing-guards-resolvers">Routing Guards & Resolvers</button>
-        <button class="styled" routerLink="custom-directives-pipes-practice">Custom Directives/Pipes Practice</button>
-        <button class="styled" routerLink="state-management-practice">State Management Practice</button>
-        <button class="styled" routerLink="unit-testing-practice">Unit Testing Practice</button>
-        <button class="styled" routerLink="performance-techniques">Performance Techniques</button>
+            <!-- Advanced Angular -->
+            <button class="styled" routerLink="ngrx-redux">NgRx / Redux</button>
+            <button class="styled" routerLink="change-detection">Change Detection Strategies</button>
+            <button class="styled" routerLink="performance-optimization">Performance Optimization</button>
+            <button class="styled" routerLink="lazy-loading">Lazy Loading & Module Federation</button>
+            <button class="styled" routerLink="dynamic-components">Dynamic Components</button>
+            <button class="styled" routerLink="custom-directives-pipes">Custom Directives & Pipes</button>
+            <button class="styled" routerLink="unit-e2e-testing">Unit Testing & E2E Testing</button>
+            <button class="styled" routerLink="security">Security Best Practices (XSS, CSRF, JWT)</button>
+            <button class="styled" routerLink="pwa-ssr">PWA & Server-Side Rendering (Angular Universal)</button>
+            <button class="styled" routerLink="internationalization">Internationalization (i18n)</button>
+
+
+            <!-- Additional Topics -->
+            <button class="styled" routerLink="career-development">Career Development & Interview Prep</button>
+
     </div>
 
     <div class="sub-components-wraper">
