--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,9 +14,6 @@
     <div class="card" routerLinkActive="active"  (click)="navigateTo('d3js')">
       D3 Js
     </div>
-    <!-- <div class="card" routerLinkActive="active"  (click)="navigateTo('nodejs')">
-      Node Js
-    </div> -->
     <div class="card" routerLinkActive="active"  (click)="navigateTo('nest')">
       Nest Js
     </div>
@@ -28,6 +25,9 @@
     </div>
     <div class="card" routerLinkActive="active"  (click)="navigateTo('aws')">
       Aws
+    </div>
+     <div class="card" routerLinkActive="active"  (click)="navigateTo('store')">
+       Highlights  Store
     </div>
   </div>
   <div class="modules">
