--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -54,9 +54,10 @@ p,h1,h2,h3,h4,h5,h6{
             align-items: center;
             flex-direction: column;
             background-color: aliceblue;
-            width: 100px;
-            height: 50px;
-            border-radius: 10px;    
+            min-width: 100px;
+            height: 40px;
+            border-radius: 10px;  
+            padding: 10px;  
     }
    
 } 
